# rust-web-play

./: Cargo.toml  example.env
.tangled/workflows/: build.yml
src/: error.rs  lib.rs  main.rs
