[package]
name = "rust-web-play"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.9.0"
anyhow = { version = "1.0.100", features = ["backtrace"] }
chrono = "0.4.42"
faker_rand = "0.1.1"
rand = "0.8.5"
serde = { version = "1.0.209", features = ["derive"] }
surrealdb = "2.0.4"
thiserror = "1.0.64"

